--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -33,7 +33,7 @@ last modified on the date shown above.
 \newpage
 
 \section{The VCF specification}
-VCF is a text file format (most likely stored in a compressed manner). 
+VCF is a text file format (most likely stored in a compressed manner).
 It contains meta-information lines (prefixed with "\#\#"), a header
 line (prefixed with "\#"), and data lines
 each containing information about a position in the genome and genotype
@@ -41,7 +41,7 @@ information on samples for each position
 (text fields separated by tabs). Zero length fields are not allowed, a dot (".") must
 be used instead.
 In order to ensure interoperability across platforms, VCF compliant implementations must support
-both LF (\texttt{\textbackslash n}) and CR+LF (\texttt{\textbackslash r\textbackslash n}) newline conventions.  
+both LF (\texttt{\textbackslash n}) and CR+LF (\texttt{\textbackslash r\textbackslash n}) newline conventions.
 
 \subsection{An example}
 \scriptsize
@@ -76,15 +76,15 @@ This example shows (in order): a good simple SNP, a possible SNP that has been f
 
 \subsection{Character encoding, non-printable characters and characters with special meaning}
 \label{character-encoding}
-The character encoding of VCF files is UTF-8.  UTF-8 is a multi-byte 
-character encoding that is a strict superset of 7-bit ASCII and has the 
-property that none of the bytes in any multi-byte characters are 7-bit ASCII 
-bytes. As a result, most software that processes VCF files does not have 
-to be aware of the possible presence of multi-byte UTF-8 characters. 
+The character encoding of VCF files is UTF-8.  UTF-8 is a multi-byte
+character encoding that is a strict superset of 7-bit ASCII and has the
+property that none of the bytes in any multi-byte characters are 7-bit ASCII
+bytes. As a result, most software that processes VCF files does not have
+to be aware of the possible presence of multi-byte UTF-8 characters.
 Note that non-printable characters U+0000-U+0008, U+000B-U+000C, U+000E-U+001F are disallowed.
 Line separators must be CR+LF or LF and they are allowed only as line separators at
 end of line.
-Characters with special meaning (such as field delimiters ';' in INFO 
+Characters with special meaning (such as field delimiters ';' in INFO
 or ':' FORMAT fields) must be represented using the capitalized percent encoding:
 
 \begingroup\footnotesize
@@ -96,15 +96,15 @@ or ':' FORMAT fields) must be represented using the capitalized percent encoding
 \%2C  &  ,  & (comma)                \\
 \%0D  & CR  &                        \\
 \%0A  & LF  &                        \\
-\%09  & TAB & 
+\%09  & TAB &
 \end{tabular}
 \endgroup
 
 
 \subsection{Data types}
-Data types supported by VCF are: Integer (32-bit, signed), Float (32-bit, formatted 
+Data types supported by VCF are: Integer (32-bit, signed), Float (32-bit, formatted
 to match the regular expression \texttt{\^{}[-+]?[0-9]*\textbackslash.?[0-9]+([eE][-+]?[0-9]+)?\$}, \texttt{NaN}, or \texttt{+/-Inf}), Flag, Character, and
-String. For the Integer type, the values from $-2^{31}$ to $-2^{31}+7$ cannot be stored in the binary version and therefore 
+String. For the Integer type, the values from $-2^{31}$ to $-2^{31}+7$ cannot be stored in the binary version and therefore
 are disallowed in both VCF and BCF, see \ref{BcfTypeEncoding}.
 
 \subsection{Meta-information lines}
@@ -152,7 +152,7 @@ INFO fields are described as follows (first four keys are required, source and v
 \end{verbatim}
 
 Possible Types for INFO fields are: Integer, Float, Flag, Character, and
-String. 
+String.
 The Number entry is an Integer that describes the number of values that
 can be included with the INFO field. For example, if the INFO field contains a
 single number, then this value must be $1$; if the INFO field describes a
@@ -185,31 +185,47 @@ Genotype fields specified in the FORMAT field are described as follows:
 Possible Types for FORMAT fields are: Integer, Float, Character, and String (this field is otherwise defined precisely as the INFO field).
 
 \subsubsection{Alternative allele field format}
-Symbolic alternate alleles are described as follows:
+Symbolic alternate alleles specified in the ALT field are described as follows:
 \begin{verbatim}
 ##ALT=<ID=type,Description=description>
 \end{verbatim}
 
 \noindent \textbf{Structural Variants} \newline
-In symbolic alternate alleles for imprecise structural variants,
-the ID field indicates the type of structural variant, and can be a
-colon-separated list of types and subtypes. ID values are case sensitive
-strings and must not contain whitespace or angle brackets. The first level type
-must be one of the following:
-\begin{itemize}
-  \item DEL Deletion relative to the reference
-  \item INS Insertion of novel sequence relative to the reference
-  \item DUP Region of elevated copy number relative to the reference
-  \item INV Inversion of reference sequence
-  \item CNV Copy number variable region (may be both deletion and duplication)
-\end{itemize}
+In symbolic alternate alleles for structural variants, the ID field indicates the type of structural variant, and can consist of a colon-separated list of types and subtypes. ID values are case sensitive strings and must not contain whitespace or angle brackets. The first level type must be one of the following:\newline
 
-The CNV category should not be used when a more specific category can be applied. Reserved subtypes include:
-\begin{itemize}
-  \item DUP:TANDEM Tandem duplication
-  \item DEL:ME Deletion of mobile element relative to the reference
-  \item INS:ME Insertion of a mobile element relative to the reference
-\end{itemize}
+\begin{tabular}{l l}
+DEL  &  Deletion relative to the reference \\
+INS  &  Insertion relative to the reference \\
+DUP  &  Region of elevated copy number relative to the reference \\
+INV  &  Inversion of reference sequence \\
+CNV  &  Copy number variable region (multiallelic) \\
+BND  &  Breakend \\
+\end{tabular}
+\newline
+
+
+\noindent Variant subtypes should be used for maximum specificity. Reserved subtypes include:
+\newline
+
+\begin{tabular}{l l}
+DEL:ME  &  Absence of mobile element present in the reference \\
+DEL:ME:ALU  &  Absence of Alu element present in the reference \\
+DEL:ME:LINE1  &  Absence of LINE1 element present in the reference \\
+DEL:ME:SVA  &  Absence of SVA element present in the reference \\
+DEL:ME:HERV  &  Absence of HERV element present in the reference \\
+\\
+INS:ME  &  Insertion of mobile element relative to the reference \\
+INS:ME:ALU  &  Insertion of Alu element relative to the reference \\
+INS:ME:LINE1  &  Insertion of LINE1 element relative to the reference \\
+INS:ME:SVA  &  Insertion of SVA element relative to the reference \\
+INS:ME:HERV  &  Insertion of HERV element relative to the reference \\
+\\
+DUP:TANDEM  &  Tandem duplication, original orientation \\
+DUP:TANDEM:INV:LEFT  &  Tandem duplication to left of original, inverted orientation \\
+DUP:TANDEM:INV:RIGHT  &  Tandem duplication to right of original, inverted orientation \\
+\end{tabular}\newline
+
+See examples below for further guidance.
 
 \bigskip
 
@@ -235,7 +251,7 @@ It is recommended for VCF, and required for BCF, that the header includes tags
 describing the contigs referred to in the file. The structured \texttt{contig}
 field must include the ID attribute and typically includes also
 sequence length, MD5 checksum, URL tag to indicate where the sequence can be
-found, etc. For example: 
+found, etc. For example:
 \begin{verbatim}
 ##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa,...>
 \end{verbatim}
@@ -320,7 +336,7 @@ There are 8 fixed fields per record.  Fixed fields are:
   the allele Strings. (String, Required).
 
   If the reference sequence contains IUPAC ambiguity codes not
-  allowed by this specification (such as R = A/G), the ambiguous reference base 
+  allowed by this specification (such as R = A/G), the ambiguous reference base
   must be reduced to a concrete base by using the one that is first alphabetically
   (thus R as a reference base is converted to A in VCF.)
 
@@ -463,7 +479,7 @@ As with the INFO field, there are several common, reserved keywords that are sta
                0   & 0 &   &   &   \\
                1   & 1 & 2 &   &   \\
                2   & 3 & 4 & 5 &   \\
-               3   & 6 & 7 & 8 & 9 
+               3   & 6 & 7 & 8 & 9
             \end{tabular}
             }
     \end{itemize}
@@ -505,7 +521,7 @@ VCF records use a simple haplotype representation for REF and ALT alleles to des
 
 \section{INFO keys used for structural variants}
 \label{sv-info-keys}
-The following INFO keys are reserved for encoding structural variants. When a key reflects a property of a single alt allele (e.g. SVLEN), then when there are multiple alt alleles there will be multiple values for the key corresponding to each alelle (e.g. SVLEN=-100,-110 for a deletion with two distinct alt alleles).
+The following INFO keys are reserved for encoding structural variants. In general, when these keys are used by imprecise variants, the values should be best estimates. When a key reflects a property of a single alt allele (e.g. SVLEN), then when there are multiple alt alleles there will be multiple values for the key corresponding to each alelle (e.g. SVLEN=-100,-110 for a deletion with two distinct alt alleles).
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=IMPRECISE,Number=0,Type=Flag,Description="Imprecise structural variation">
@@ -513,92 +529,36 @@ The following INFO keys are reserved for encoding structural variants. When a ke
 ##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the variant described in this record">
 \end{verbatim}
 \normalsize
-For precise variants, END is POS + length of REF allele - 1.
+For precise variants, END is POS + length of REF allele - 1, and the for imprecise variants, END is the corresponding best estimate.
 
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=SVTYPE,Number=1,Type=String,Description="Type of structural variant">
 \end{verbatim}
 \normalsize
-SVTYPE is required for all structural variants. The following reserved values should be used whenever possible; indented values are subtypes that should be used if evidence supports them (see examples in Section 5.3, Encoding Structural Variants):\vspace{0.3cm}\\
+SVTYPE is a primitive basic data type and must be specified for all structural variants. Its value can usually be deduced from the REF and ALT fields, however despite this redundancy it is quite useful for filtering. For each VCF record, SVTYPE must be assigned exactly one of the following values:
+
 \begin{itemize}
-\item [\null] INS:  Insertion relative to the reference
-	\begin{itemize}
-	\item [\null] MEI:  Mobile element insertion relative to the reference
-		\begin{itemize}
-		\item [\null] ALU:  Alu mobile element insertion relative to the reference
-		\item [\null] LINE1:  LINE1 mobile element insertion relative to the reference
-		\item [\null] SVA:  SVA mobile element insertion relative to the reference
-		\item [\null] HERV:  HERV mobile element insertion relative to the reference
-		\end{itemize}
-	\item [\null] RET:  Retrotransposon insertion relative to the reference
-	\end{itemize}
-\item [\null] DEL:  Deletion relative to the reference
-	\begin{itemize}
-	\item [\null] -MEI:  Absence of a mobile element present in the reference
-		\begin{itemize}
-		\item [\null] -ALU:  Absence of a Alu mobile element present in the reference
-		\item [\null] -LINE1:  Absence of a LINE1 mobile element present in the reference
-		\item [\null] -SVA:  Absence of a SVA mobile element present in the reference
-		\item [\null] -HERV:  Absence of a HERV mobile element present in the reference
-		\end{itemize}
-	\item [\null] -RET:  Absence of a retrotransposon present in the reference
-	\end{itemize}
-\item [\null] TRA:  Translocation
-\item [\null] STR:  Short tandem repeat variation
-\item [\null] INV:  Inversion relative to the reference
-\item [\null] DUP:  Duplication
-	\begin{itemize}
-	\item [\null] TANDUP:  Tandem duplication (one of Direct, Inverted-upstream, or Inverted-downstream)
-	\item [\null] DISDUP:  Dispersed duplication
-	\end{itemize}
-\item [\null] DELINS:  Deletion-insertion (replacement of reference sequence with sequence of different content or length)
-\item [\null] OTHER:  Complex variant not covered elsewhere
-	\begin{itemize}
-	\item [\null] DEL\_DUP:  Deletion + Duplication
-	\item [\null] DEL\_INV:  Deletion + Inversion
-	\item [\null] DUP\_INV:  Duplication + Inversion
-	\item [\null] DEL\_DUP\_INV:  Deletion + Duplication + Inversion
-	\end{itemize}
-\item [\null] CNV:  Copy number variation\vspace{0.3cm}
+\item DEL:  Deletion relative to the reference
+\item INS:  Insertion relative to the reference
+\item DUP:  Region of elevated copy number relative to the reference
+\item INV:  Inversion of reference sequence
+\item CNV:  Copy number variable region (multiallelic)
+\item BND:  Breakend
 \end{itemize}
-TRA (Translocation):  A VCF translocation record describes the juxtaposition of two DNA segments from disparate genomic locations (from the same or from different chromosomes). It must include two genomic coordinates, each accompanied by an orientation (see STRAND below). A VCF translocation record only describes the immediate molecular context of the novel adjacency generated by the translocation event. It should not be confused with the traditional cytogenetic notion of translocation, which is understood to imply that the remainder of the chromosome arms beyond the specified breakpoints are also involved.\vspace{0.3cm}\\
-\setlength{\parindent}{0.3cm}
-\indent In a TRA VCF record:\vspace{0.3cm}\\
-\indent CHROM = chromosome of the first breakpoint\\
-\indent POS = coordinate of the first breakpoint\\
-\indent CHR2 = chromosome of 2nd breakpoint\\
-\indent END = coordinate of 2nd breakpoint\\
-\indent STRAND = (head-tail, tail-head, head-head, tail-tail)\\
-\indent REF = reference base at position CHROM:POS\\
-\indent ALT = reference base at position CHR2:END\vspace{0.3cm}\\
-STR (Short tandem repeat variation, simple sequence repeat, microsatellite): Short tandem repeat variants may be represented in VCF either as structural variants or as ordinary indels (see Section 5.3 for examples). The \textbf{Pindel} software package, for example, treats STRs as standard variants, while \textbf{lobSTR} treats them as structural variants. When treated as structural variants:\vspace{0.3cm}\\
-\indent RPA = repeats per allele\\
-\indent END = end coordinate of the STR\\
-\indent MOTIF = the canonicalized STR repeat motif\\
-\indent NS = number of samples with data\\
-\indent REF = the reference copy number\\
-\indent RL = total length of the STR tract in the reference\\
-\indent RU = repeat motif as it appears on the forward strand in the reference\vspace{0.3cm}\\
-\indent More information on representing STRs in VCF can be found at http://lobstr.teamerlich.org/file-formats.html\vspace{0.3cm}\\
-INV (Inversion):  Describing a canonical inversion is straightforward: it is the excision of a sequence followed by its reinsertion at the same location in reverse orientation. However, actual biological inversions are almost always more complex, involving loss or gain of material at breakpoints, and often co-occurring with secondary SV events such as deletions or duplications. See SVTYPE OTHER for more information.\\
-\\
-DUP (Duplication):  A region of elevated copy number relative to the reference. Depending on the methods by which a given duplication was ascertained, its location and orientation in relation to the reference may or may not be known. If it was detected by read depth analysis or microarray, the location of the duplicate copy in the non-reference genome is probably unknown. The following SVTYPEs are preferred over DUP because they provide more information:\vspace{0.3cm}\\
-\indent TANDUP (Tandem duplication): A duplication located immediately adjacent to the original copy. The position and orientation of the duplicate, if known, should be specified with the TDLOC tag.\vspace{0.3cm}\\
-\indent DISDUP (Dispersed duplication): A duplication located somewhere other than immediately adjacent to the original copy.\\
+
+
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Difference in length between REF and ALT alleles">
 \end{verbatim}
 \normalsize
-One value for each ALT allele. ALT alleles that are longer than the reference (e.g. insertions) have positive values, while those shorter than the reference (e.g. deletions) have negative values.
+SVLEN indicates the relative size of the ALT allele compared to the REF allele. If ALT is longer than REF (e.g. insertions), SVLEN must be positive; if ALT is shorter than REF (e.g. deletions), SVLEN must be negative. One SVLEN value for each ALT allele.
 
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=CIPOS,Number=2,Type=Integer,Description="Confidence interval around POS for imprecise variants">
 ##INFO=<ID=CIEND,Number=2,Type=Integer,Description="Confidence interval around END for imprecise variants">
-##INFO=<ID=CIVALUE,Number=,Type=Float,Description="Degree of certainty expressed by CIPOS/CIEND: `1' indicates 100\% certainty
-       that a breakpoint falls within confidence interval; default value is `0.95'">
 ##INFO=<ID=HOMLEN,Number=.,Type=Integer,Description="Length of base pair identical micro-homology at event breakpoints">
 ##INFO=<ID=HOMSEQ,Number=.,Type=String,Description="Sequence of base pair identical micro-homology at event breakpoints">
 ##INFO=<ID=BKPTID,Number=.,Type=String,Description="ID of the assembled alternate allele in the assembly file">
@@ -608,7 +568,6 @@ For precise variants, the consensus sequence the alternate allele assembly is de
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=TDLOC,Number=1,Type=String,Description="Tandem duplication type (must be: direct, inverted-upstream, or inverted-downstream)">
 ##INFO=<ID=MEINFO,Number=4,Type=String,Description="Mobile element info of the form NAME,START,END,POLARITY">
 ##INFO=<ID=METRANS,Number=4,Type=String,Description="Mobile element transduction info of the form CHR,START,END,POLARITY">
 ##INFO=<ID=DGVID,Number=1,Type=String,Description="ID of this element in Database of Genomic Variation">
@@ -1459,7 +1418,7 @@ In BCF2, the original VCF records are converted to binary and encoded as BGZF
 blocks.  Each record is conceptually two parts.  First is the site information
 (chr, pos, INFO field).  Immediately after the sites data is the genotype data
 for every sample in the BCF2 file.  The genotype data may be omitted entirely
-from the record if there is no genotype data in the VCF file. 
+from the record if there is no genotype data in the VCF file.
 Compression of a BCF file is recommended but not required.
 
 \subsubsection{Site encoding}
@@ -1559,7 +1518,7 @@ Note this is not used in BCF2, but its type is reserved in case this becomes nec
 
 \textbf{Integers} may be encoded as 8, 16, or 32 bit values, in little-endian
 order.  It is up to the encoder to determine the appropriate ranged value to
-use when writing the BCF2 file. 
+use when writing the BCF2 file.
 For integer types, the values 0x80, 0x8000, 0x80000000 are interpreted as
 missing values and 0x81, 0x8001, 0x80000001 as end-of-vector indicators
 (for 8, 16, and 32 bit values, respectively). Note that the end-of-vector byte
@@ -1643,7 +1602,7 @@ is already a string) we collapse the list of strings into a single
 comma-separated string, encode it as a regular BCF2 vector of characters, and
 on reading explode it back into the list of strings.  This works because
 strings in VCF cannot contain `{ \tt ,}' (it's a field separator) and so we can
-safely use `{\tt ,}' to separate the individual strings. 
+safely use `{\tt ,}' to separate the individual strings.
 
 % String vectors in BCF do not need to start with comma, as the number of
 % values is indicated already in the definition of the tag in the header.
@@ -1699,7 +1658,7 @@ A \textbf{Genotype (GT) field} is encoded in a typed integer vector (can be 8,
 16, or even 32 bit if necessary) with the number of elements equal to the
 maximum ploidy among all samples at a site.  For one individual, each integer
 in the vector is organized as $(allele+1) << 1 \mid phased$ where allele is set
-to -1 if the allele in GT is a dot `.' (thus the higher bits are all 0).  
+to -1 if the allele in GT is a dot `.' (thus the higher bits are all 0).
 The vector is padded with the end-of-vector values if the GT having fewer ploidy.
 We note specifically that except for the end-of-vector byte, no other negative
 values are allowed in the GT array.
@@ -1952,7 +1911,7 @@ section~4 as BAM files and other block-compressed files with BGZF.
 \item Introduced \#\#META header lines for defining phenotype metadata
 \item New reserved tag "CNP" analogous to "GP" was added. Both CNP and GP use 0 to 1 encoding, which is a change from previous phred-scaled GP.
 \item In order for VCF and BCF to have the same expressive power, we state explicitly that Integers and Floats are 32-bit numbers. Integers are signed.
-\item We state explicitly that zero length strings are not allowed, this includes the CHROM and ID column, INFO IDs, FILTER IDs and FORMAT IDs. Meta-information lines can be in any order, with the exception of \#\#fileformat which must come first. 
+\item We state explicitly that zero length strings are not allowed, this includes the CHROM and ID column, INFO IDs, FILTER IDs and FORMAT IDs. Meta-information lines can be in any order, with the exception of \#\#fileformat which must come first.
 \item All header  lines of the form \#\#key=$<$ID=xxx,...$>$ must have an ID value
 that is unique for a given value of "key". All header lines whose value starts
 with "$<$" must have an ID field. Therefore, also \#\#PEDIGREE newly requires a unique ID.
@@ -1970,7 +1929,7 @@ with "$<$" must have an ID field. Therefore, also \#\#PEDIGREE newly requires a 
 \begin{itemize}
 \item BCF header lines can include optional IDX field
 \item We introduce end-of-vector byte and reserve 8 values for future use
-\item Clarified that except the end-of-vector byte, no other negative values are allowed in the GT array 
+\item Clarified that except the end-of-vector byte, no other negative values are allowed in the GT array
 \item String vectors in BCF do not need to start with comma, as the number of values is indicated already in the definition of the tag in the header.
 \item The implicit filter PASS was described inconsistently throughout BCFv2.1: It is encoded as the first entry in the dictionary, not the last.
 \end{itemize}
